gcc-14.2.0/libgo/misc/cgo/errors/testdata/issue28069.go
version https://git-lfs.github.com/spec/v1
oid sha256:9f04033be616e919923b5b0968509b10a7db2c07ce4ada8d3cd11b69c608e771
size 555
